modified version number of CSS file

--- a/media-query-reporter/assets/CSS/mediaquery-reporter.css
+++ b/media-query-reporter/assets/CSS/mediaquery-reporter.css
@@ -1,8 +1,9 @@
 /* ======================================
 
 	CSS3 Media Query Reporter
-	  v. 1.0.1
+	  v. 1.1.0
 	  by David Cochran - aLittleCode.com
+	  Modified by: David Kartuzinski - kaidawei.me - to work with Andy Langton's solution
 
 ========================================= */
 
