--- a/media-query-reporter/assets/CSS/mediaquery-reporter.css
+++ b/media-query-reporter/assets/CSS/mediaquery-reporter.css
@@ -20,6 +20,7 @@ p#viewportInfo {
 	background-color: hsla(1,60%,40%,0.7);
 	color: #fff;
 	z-index: 9999;
+	max-width: 100%;
 }
 @media only screen and (min-width: 320px) {
 	p#viewportInfo {
