added message - Website design in BETA. Please email issues with screen cap. -  and fixed button font size issues

--- a/media-query-reporter/assets/CSS/mediaquery-reporter.css
+++ b/media-query-reporter/assets/CSS/mediaquery-reporter.css
@@ -9,8 +9,8 @@
 
 p#viewportInfo {
 	content: "less than 320px";
-	font-size: 200%;
-	line-height: 1;
+	font-size: 1.5rem;;
+	line-height: 1.2;
 	font-weight: bold;
 	position: fixed;
 	bottom: 40px;
@@ -21,6 +21,12 @@ p#viewportInfo {
 	color: #fff;
 	z-index: 9999;
 	max-width: 100%;
+}
+
+p#viewportInfo .techButton {
+	font-family: serif;
+	font-size: 1.5rem;;
+	line-height: 1.2;
 }
 @media only screen and (min-width: 320px) {
 	p#viewportInfo {
